Adcionado Mais conteudos nas seções

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
       
       <section>
         <div>
-          
+          <h2>Novidades!</h2>
+          <p>Em breve, uma comunidade perfeita perfeita para você!<br>Um espaço dedicado para desenvolvimento web com profissionais de diferentes stacks.</p>
+          <hr>
+          <p>Confira algumas das tecnologias presentes na comunidade:</p>
         </div>
       </section>
 
