Adcionado mais Textos em HTML

--- a/index.html
+++ b/index.html
@@ -56,17 +56,29 @@
             <p>"Bem-vindos à comunidade All Stack - Web Development! Estamos felizes em recebê-los em nossa comunidade de desenvolvimento web. Aqui, buscamos compartilhar conhecimentos, discutir ideias e crescer juntos. <span id="Complemento-oculto" style="">Esperamos que vocês encontrem neste espaço uma fonte de inspiração e aprendizado, e que contribuam para enriquecer ainda mais a nossa comunidade. Juntos,</span><span id="vamos"> vamos</span> construir um ambiente inclusivo, respeitoso e colaborativo para todos. Sejam bem-vindos!"</p>
         </div>
         <div id="convite">
-          <h2>Convide Seus Colegas!</h2>
+          <h3>Convide Seus Colegas!</h3>
           <p>"Convide agora mesmo seus colegas e faça parte da comunidade All Stack - Web Development! Vamos juntos rumo ao sucesso! <a href="" target="_blank">Junte-se a Nossa comunidade</a></p>
         </div>
       </section> <!-- Fim da Secao Boas Vindas -->
       
       <section>
         <div>
-          <h2>Novidades!</h2>
+          <h3>Novidades!</h3>
           <p>Em breve, uma comunidade perfeita perfeita para você!<br>Um espaço dedicado para desenvolvimento web com profissionais de diferentes stacks.</p>
           <hr>
-          <p>Confira algumas das tecnologias presentes na comunidade:</p>
+          <p>Confira algumas das tecnologias presentes na comunidade na guia <a href="/sobre">Sobre.</a></p>
+        </div>
+        <div>
+          <h3>De Olho Nas Regras!</h3>
+          <p>Como toda comunidade, não pode faltar organização! Atualmente, estamos com pequenas regras que podem ser atualizadas a qualquer momento, portanto, atente-se na guia <strong>Novidades</strong> para não ficar por fora de nenhuma regra nova.</p>
+          <hr>
+          <div>
+            <h4>1º Proibido fazer divulgações.</h4>
+            <p>Toda e qualquer divulgação de qualquer conteudo, deve primeiro passar por aprovação dos admins da comunidade.</p>
+        </div>
+        <div>
+        
+        </div>
         </div>
       </section>
 
