Index.html Terminado

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
             <p>Toda e qualquer divulgação de qualquer conteudo, deve primeiro passar por aprovação dos admins da comunidade.</p>
         </div>
         <div>
-        
+          <h4>2. Conteúdos multimidias (videos, imagens, noticias, links, figurinhas) são todos permitidos, salvo em casos de:</h4> 
+            <ol>
+              <li>Flood;</li>
+              <li>Conteúdo discriminatório, racista, e relacionados; </li>
+              <li>Explícitos.</li>
+              <li>Atos ilícitos e crimes previstos em lei.</li>
+            </ol>
         </div>
         </div>
       </section>
