--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="mask-icon" href="./icon/safari-pinned-tab.svg" color="#3484b0" />
     <link rel="shortcut icon" href="./icon/favicon.ico" />
 
-    <link rel="stylesheet" href="./style/styles.css" />
+    <link rel="stylesheet" href="./style/index.css" />
     <link rel="stylesheet" href="./style/nav.css">
   </head>
   <body>
