Corrigindo erro no HTML e Adcionando @media no CSS

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
             <p>Toda e qualquer divulgação de qualquer conteudo, deve primeiro passar por aprovação dos admins da comunidade.</p>
         </div>
         <div>
-          <h4>2. Conteúdos multimidias (videos, imagens, noticias, links, figurinhas) são todos permitidos, salvo em casos de:</h4> 
+          <h4>2. Sempre respeite os membros</h4>
+          <p>Sabemos que todos gostam de brincar e se distrair. Mas sempre mantenham o cuidado para nunca, jamais ofender nenhum membro da comunidade em qualquer plataforma.</p>
+        </div>
+        <div>
+          <h4>3. Conteúdos multimidias (videos, imagens, noticias, links, figurinhas) são todos permitidos, salvo em casos de:</h4> 
             <ol>
               <li>Flood;</li>
               <li>Conteúdo discriminatório, racista, e relacionados; </li>
