Modificado index.css e alterado id do complemento-oculto

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section> <!-- secao boas vindas -->
         <div id="boas-vindas">
           <h3>Boas Vindas</h3>
-            <p>"Bem-vindos à comunidade All Stack - Web Development! Estamos felizes em recebê-los em nossa comunidade de desenvolvimento web. Aqui, buscamos compartilhar conhecimentos, discutir ideias e crescer juntos. <span id="Complemento-oculto" style="">Esperamos que vocês encontrem neste espaço uma fonte de inspiração e aprendizado, e que contribuam para enriquecer ainda mais a nossa comunidade. Juntos,</span><span id="vamos"> vamos</span> construir um ambiente inclusivo, respeitoso e colaborativo para todos. Sejam bem-vindos!"</p>
+            <p>"Bem-vindos à comunidade All Stack - Web Development! Estamos felizes em recebê-los em nossa comunidade de desenvolvimento web. Aqui, buscamos compartilhar conhecimentos, discutir ideias e crescer juntos. <span id="complemento-oculto" style="">Esperamos que vocês encontrem neste espaço uma fonte de inspiração e aprendizado, e que contribuam para enriquecer ainda mais a nossa comunidade. Juntos,</span><span id="vamos"> vamos</span> construir um ambiente inclusivo, respeitoso e colaborativo para todos. Sejam bem-vindos!"</p>
         </div>
         <div id="convite">
           <h3>Convide Seus Colegas!</h3>
