Install-Pwa criado

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <link rel="shortcut icon" href="./icon/favicon.ico" />
 
     <link rel="stylesheet" href="./style/index.css" />
-    <link rel="stylesheet" href="./style/nav.css">
+    <link rel="stylesheet" href="./style/nav.css" />
   </head>
   <body>
     <header>
       <nav class="navbar">
-        <button class="navbar-toggler"><span></span><span></span><span></span></button> <!-- Botao toggle -->
+        <button class="navbar-toggler">
+          <span></span><span></span><span></span>
+        </button>
+        <!-- Botao toggle -->
         <ul class="navbar-nav navbar-collapse">
           <li class="nav-item"><a href="/" aria-current="Login">Login</a></li>
           <li class="nav-item"><a href="/" aria-current="page">Home</a></li>
@@ -47,67 +50,103 @@
         </ul>
       </nav>
     </header>
-  
+
     <main>
       <h1>All Stack - Web Development</h1>
-      <section> <!-- secao boas vindas -->
+      <section>
+        <!-- secao boas vindas -->
         <div id="boas-vindas">
           <h3>Boas Vindas</h3>
-            <p>"Bem-vindos à comunidade All Stack - Web Development! Estamos felizes em recebê-los em nossa comunidade de desenvolvimento web. Aqui, buscamos compartilhar conhecimentos, discutir ideias e crescer juntos. <span id="complemento-oculto" style="">Esperamos que vocês encontrem neste espaço uma fonte de inspiração e aprendizado, e que contribuam para enriquecer ainda mais a nossa comunidade. Juntos,</span><span id="vamos"> vamos</span> construir um ambiente inclusivo, respeitoso e colaborativo para todos. Sejam bem-vindos!"</p>
+          <p>
+            "Bem-vindos à comunidade All Stack - Web Development! Estamos
+            felizes em recebê-los em nossa comunidade de desenvolvimento web.
+            Aqui, buscamos compartilhar conhecimentos, discutir ideias e crescer
+            juntos.
+            <span id="complemento-oculto" style=""
+              >Esperamos que vocês encontrem neste espaço uma fonte de
+              inspiração e aprendizado, e que contribuam para enriquecer ainda
+              mais a nossa comunidade. Juntos,</span
+            ><span id="vamos"> vamos</span> construir um ambiente inclusivo,
+            respeitoso e colaborativo para todos. Sejam bem-vindos!"
+          </p>
         </div>
         <div id="convite">
           <h3>Convide Seus Colegas!</h3>
-          <p>"Convide agora mesmo seus colegas e faça parte da comunidade All Stack - Web Development! Vamos juntos rumo ao sucesso! <a href="" target="_blank">Junte-se a Nossa comunidade</a></p>
+          <p>
+            "Convide agora mesmo seus colegas e faça parte da comunidade All
+            Stack - Web Development! Vamos juntos rumo ao sucesso!
+            <a href="" target="_blank">Junte-se a Nossa comunidade</a>
+          </p>
         </div>
-      </section> <!-- Fim da Secao Boas Vindas -->
-      
+      </section>
+      <!-- Fim da Secao Boas Vindas -->
+
       <section>
         <div>
           <h3>Novidades!</h3>
-          <p>Em breve, uma comunidade perfeita perfeita para você!<br>Um espaço dedicado para desenvolvimento web com profissionais de diferentes stacks.</p>
-          <hr>
-          <p>Confira algumas das tecnologias presentes na comunidade na guia <a href="/sobre">Sobre.</a></p>
+          <p>
+            Em breve, uma comunidade perfeita perfeita para você!<br />Um espaço
+            dedicado para desenvolvimento web com profissionais de diferentes
+            stacks.
+          </p>
+          <hr />
+          <p>
+            Confira algumas das tecnologias presentes na comunidade na guia
+            <a href="/sobre">Sobre.</a>
+          </p>
         </div>
         <div>
           <h3>De Olho Nas Regras!</h3>
-          <p>Como toda comunidade, não pode faltar organização! Atualmente, estamos com pequenas regras que podem ser atualizadas a qualquer momento, portanto, atente-se na guia <strong>Novidades</strong> para não ficar por fora de nenhuma regra nova.</p>
-          <hr>
+          <p>
+            Como toda comunidade, não pode faltar organização! Atualmente,
+            estamos com pequenas regras que podem ser atualizadas a qualquer
+            momento, portanto, atente-se na guia <strong>Novidades</strong> para
+            não ficar por fora de nenhuma regra nova.
+          </p>
+          <hr />
           <div>
             <h4>1º Proibido fazer divulgações.</h4>
-            <p>Toda e qualquer divulgação de qualquer conteudo, deve primeiro passar por aprovação dos admins da comunidade.</p>
-        </div>
-        <div>
-          <h4>2. Sempre respeite os membros</h4>
-          <p>Sabemos que todos gostam de brincar e se distrair. Mas sempre mantenham o cuidado para nunca, jamais ofender nenhum membro da comunidade em qualquer plataforma.</p>
-        </div>
-        <div>
-          <h4>3. Conteúdos multimidias (videos, imagens, noticias, links, figurinhas) são todos permitidos, salvo em casos de:</h4> 
+            <p>
+              Toda e qualquer divulgação de qualquer conteudo, deve primeiro
+              passar por aprovação dos admins da comunidade.
+            </p>
+          </div>
+          <div>
+            <h4>2. Sempre respeite os membros</h4>
+            <p>
+              Sabemos que todos gostam de brincar e se distrair. Mas sempre
+              mantenham o cuidado para nunca, jamais ofender nenhum membro da
+              comunidade em qualquer plataforma.
+            </p>
+          </div>
+          <div>
+            <h4>
+              3. Conteúdos multimidias (videos, imagens, noticias, links,
+              figurinhas) são todos permitidos, salvo em casos de:
+            </h4>
             <ol>
               <li>Flood;</li>
-              <li>Conteúdo discriminatório, racista, e relacionados; </li>
+              <li>Conteúdo discriminatório, racista, e relacionados;</li>
               <li>Explícitos.</li>
               <li>Atos ilícitos e crimes previstos em lei.</li>
             </ol>
-        </div>
+          </div>
         </div>
       </section>
-
     </main>
 
-
-
-    <script src="https://kit.fontawesome.com/03dc0a44a2.js" crossorigin="anonymous"></script>
     <script
-    type="module"
-    src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate"
-  ></script>
+      src="https://kit.fontawesome.com/03dc0a44a2.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate"
+    ></script>
     <script src="./script/script.js"></script>
     <script src="./script/nav.js"></script>
     <script src="./pwa/sw.js"></script>
     <script src="./pwa/service-worker.js"></script>
-    <script defer>
-      const el = document.createElement('pwa-update');
-      document.body.appendChild(el);
-    </script>
+    <script src="install-pwa.js" defer></script>
   </body>
 </html>
